<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:padding="18dp"
    android:background="@drawable/login_back"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/writePoem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/write_poem"

            />

        <Button
            android:id="@+id/mypoem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="20dp"
            android:textSize="20sp"
            android:text="@string/my_poems"

            />



        <Button
            android:id="@+id/challange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/poem_challange"
            android:padding="20dp"

            />

        <Button
            android:id="@+id/reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="20dp"
            android:text="@string/reminder"

            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>