<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    android:padding="18dp"
    tools:context=".update_poem">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update My Poem"
            android:gravity="center"
            android:textSize="40dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/round_corner"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date"/>

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="10dp"
            android:background="@drawable/round_corner"
            />

        <TextView

            android:layout_width="match_parent"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/topic"/>

        <EditText
            android:id="@+id/topicEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/round_corner"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poem"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"

            />

        <EditText
            android:id="@+id/poemEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/round_corner"

            />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/update_poem"
            android:layout_marginTop="20dp"
            />
        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Back"
            />

    </LinearLayout>
</ScrollView>

</RelativeLayout>